Test networking and DataBase

--- a/Reciplease_Project/Reciplease_Project.xcodeproj/xcshareddata/xcschemes/Reciplease_Project.xcscheme
+++ b/Reciplease_Project/Reciplease_Project.xcodeproj/xcshareddata/xcschemes/Reciplease_Project.xcscheme
@@ -26,7 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "506A1AEE2521EE4000CA8EDD"
+            BuildableName = "Reciplease_Project.app"
+            BlueprintName = "Reciplease_Project"
+            ReferencedContainer = "container:Reciplease_Project.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
